exports[`App should detach 1`] = `
<div class="app-container">
  <div class="initial-warning-container" key="_metal_jsx_1">
    <div key="_metal_jsx_1">If you do not see your components here, try refreshing the page while keeping this panel open.
      <br key="_metal_jsx_1">
      <i key="_metal_jsx_2">Or there may be no Metal.js components on the page. metal@^2.6.2 required.
        <a href="https://github.com/bryceosterhaus/metal-devtools" target="blank_" key="_metal_jsx_1">Repo</a>
      </i>
    </div>
  </div>
  <div class="resize-container" key="_metal_jsx_3"></div>
  <div class="state-pane-container" key="_metal_jsx_4">
    <div class="header" key="_metal_jsx_1">Component: </div>
    <div key="_metal_jsx_3">
      <i key="_metal_jsx_1">No Component Data</i>
    </div>
  </div>
</div>
`;

exports[`App should render 1`] = `
<div class="app-container">
  <div class="roots-wrapper" key="_metal_jsx_2">
    <div style="" class="options" title="Freezes highlights by expanded components" key="_metal_jsx_1">
      <label for="freezeUpdates" key="_metal_jsx_1">Freeze Updates</label>
      <input name="freezeUpdates" type="checkbox" key="_metal_jsx_2">
    </div>
    <div class="tree-container" key="_metal_jsx_2">
      <div class="node-wrapper   " style="padding-left: 12px;" key="_metal_jsx_1">
        <span data-nodeid="foo" class="node-name-container" key="_metal_jsx_2">&lt;
          <span class="name" key="_metal_jsx_1"></span> /&gt;</span>
      </div>
    </div>
  </div>
  <div class="resize-container" key="_metal_jsx_3"></div>
  <div class="state-pane-container" key="_metal_jsx_4">
    <div class="header" key="_metal_jsx_1">Component: </div>
    <div key="_metal_jsx_3">
      <i key="_metal_jsx_1">No Component Data</i>
    </div>
  </div>
</div>
`;

exports[`flattenIds should flatten object into an array 1`] = `
Array [
  1,
  2,
  5,
  4,
]
`;
